Finished the pichart

--- a/Project/index.html
+++ b/Project/index.html
@@ -4,10 +4,14 @@
   <head>
     <script type="text/javascript" src="bower_components/angular/angular.js"></script>
     <script type="text/javascript" src="components/Dashboard.js"></script>
+    <script type="text/javascript" src="components/guageWidget.js"></script>
+    <script type="text/javascript" src="components/pichart.js"></script>
   </head>
 
   <body ng-app="Dashboard">
-    <dashboard></dashboard>
+    <!-- <dashboard></dashboard> -->
+    <guage-widget></guage-widget>
+
   </body>
 
 </html>
