Finished the pie chart.

--- a/Project/index.html
+++ b/Project/index.html
@@ -10,7 +10,8 @@
 
   <body ng-app="Dashboard">
     <!-- <dashboard></dashboard> -->
-    <guage-widget></guage-widget>
+    <!-- <guage-widget></guage-widget> -->
+    <pichart></pichart>
 
   </body>
 
